--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "braces": "^2.3.1",
     "css-loader": "^3.4.2",
     "live-server": "^1.2.1",
     "minimist": "^0.2.1",
