--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "css-loader": "^3.4.2",
     "live-server": "^1.2.1",
     "minimist": "^0.2.1",
+    "moment": "^2.26.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
     "react-redux": "^7.2.0",
